--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DEBUG=True
 SECRET_KEY=django-insecure-hn7s3$bnb+86!u+lj102+u7_^l7gma6y5#=5!&xucw@7s7-^pj
 #DATABASE_URL=mysql://myuser:mypassword@myhost/mydatabase
+EMAIL_HOST_USER=burgutlochin11@gmail.com
+EMAIL_HOST_PASSWORD=Firdavs14159265
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
